# nltdeploy

./: .gitignore  DEPLOYMENT.md  README.md  deploy_nodejs.sh  deploy_python.sh  install.sh  pyproject.toml
.cursor/agents/: software-ops.md
.github/workflows/: sync.yml
docs/superpowers/plans/: 2026-04-11-nltdeploy-local-install.md  2026-04-15-war-23-progress-bar.md  2026-04-15-war-24-github-download-tool.md
examples/: README.md  package.json  python_env_examples.md  requirements.txt
scripts/: README.md  setup_python_env.ps1  setup_python_env.sh
scripts/01-configure-pip-sources/: README.md  deploy.sh
scripts/02-create-python-env/: README.md  deploy.sh
scripts/03-airflow/: airflow-setup.sh  deploy.sh
scripts/04-celery/: celery-setup.sh
scripts/05-utils/: util-setup.sh
scripts/06-github/: deploy.sh
scripts/07-paperclip/: paperclip-setup.sh
scripts/08-code-server/: code-server-setup.sh
scripts/09-new-api/: new-api-setup.sh
scripts/10-services/: services.sh
scripts/10-services-status/: services-status.sh
scripts/_lib/: nlt-common.sh
scripts/airflow/: setup.sh
scripts/celery/: setup.sh
scripts/code-server/: setup.sh
scripts/dev/: README.md  setup.sh
scripts/github-net/: setup.sh
scripts/lib/: nlt-common.sh  nlt-github-download.sh  nlt-progress.sh
scripts/new-api/: setup.sh
scripts/paperclip/: setup.sh
scripts/pip-sources/: README.md  setup.sh
scripts/python-env/: README.md  setup.sh
scripts/services/: nlt-services.sh
scripts/utils/: setup.sh
src/fundeploy/: __init__.py  cli.py
tests/: install_smoke.sh  progress_smoke.sh
(+30 files in other folders)
