[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "nltdeploy"
version = "0.1.1"
description = "快速部署环境的脚本工具集"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "deployment", "devops", "automation", "uv", "python-environment",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Build Tools", "Topic :: System :: Installation/Setup",]
dependencies = [ "click>=8.0.0",]
[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0.0", "ruff>=0.1.0",]

[project.urls]
Homepage = "https://github.com/farfarfun/nltdeploy"
Repository = "https://github.com/farfarfun/nltdeploy"
Issues = "https://github.com/farfarfun/nltdeploy/issues"

[project.scripts]
nltdeploy = "nltdeploy.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff.lint]
select = [ "E", "F", "I", "N", "W",]
ignore = []

[tool.setuptools.packages.find]
where = [ "src",]
